# engine

./: .gitignore  CMakeLists.txt
sources/: CMakeLists.txt
sources/RENDER/: engine.cpp  engine.hpp
tests/: CMakeLists.txt  loadlib.cpp  main.cpp
